--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "@types/node": "18.15.13",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.6",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
-    "react": "18.2.0",
+    "i18next": "^22.4.15",
+    "next": "^13.3.0",
+    "next-i18next": "^13.2.2",
+    "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.2",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "typescript": "5.0.4"
   }
 }
