--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-i18next": "^12.2.2",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "typescript": "5.0.4"
+    "sharp": "^0.32.1",
+    "typescript": "5.0.4",
+    "zustand": "^4.3.8"
   }
 }
