--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "sharp": "^0.32.1",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
