--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
+    "react-select": "^5.7.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "sharp": "^0.32.1",
