--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "next": "^13.3.0",
     "next-i18next": "^13.2.2",
     "react": "^18.2.0",
-    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
+    "react-icons": "^4.9.0",
     "react-select": "^5.7.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
