--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.24.3",
     "@tanstack/react-table": "^8.9.1",
     "@types/chroma-js": "^2.4.0",
     "@types/node": "18.15.13",
