--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
     "next": "^13.3.0",
     "next-i18next": "^13.2.2",
     "react": "^18.2.0",
+    "react-calendar": "^4.3.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
     "react-icons": "^4.9.0",
     "react-select": "^5.7.3",
-    "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4",
     "sharp": "^0.32.1",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
