--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "cross-env NODE_ENV=production next start -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
@@ -16,11 +16,13 @@
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "axios": "^1.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "8.42.0",
     "eslint-config-next": "13.3.0",
     "i18next": "^22.4.15",
     "next": "^13.3.0",
     "next-i18next": "^13.2.2",
+    "pm2": "^5.3.0",
     "react": "^18.2.0",
     "react-calendar": "^4.3.0",
     "react-dom": "18.2.0",
